feat: reverse proxy nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,4 +5,8 @@ server {
         root /var/www/html;
         index index.html;
     }
+
+    location /api/ {
+        proxy_pass http://drivenops_node:5000/;
+    }
 }
