--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   drivenops_node:
     container_name: drivenops_node
     build: ./back-end
+    restart: always
     ports:
       - 5000:5000
     depends_on:
@@ -31,6 +32,7 @@ services:
   drivenops_nginx:
     container_name: drivenops_nginx
     build: ./nginx
+    restart: always
     ports:
       - 8080:80
     volumes:
